fixing scrolling issue on mobile

--- a/code/rate.css
+++ b/code/rate.css
@@ -14,6 +14,7 @@
 body {
     background-color: var(--Very-Dark-Blue);
     min-height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
